--- a/index.html
+++ b/index.html
@@ -1,91 +1,152 @@
-<style>
-  :root {
-    --color-bg-light: #f0f4f8;
-    --color-bg-dark: #1e1e1e;
-    --color-text-light: #222;
-    --color-text-dark: #eee;
-    --color-accent: #00bfa5;
-    --color-accent-dark: #009e85;
-  }
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Shark Tapper Fusion Final</title>
+  <script src="https://telegram.org/js/telegram-web-app.js">
+function toggleTheme() {
+  const body = document.body;
+  const current = body.classList.contains("dark-theme") ? "dark" : "light";
+  const next = current === "dark" ? "light" : "dark";
+  body.classList.remove(current + "-theme");
+  body.classList.add(next + "-theme");
+  localStorage.setItem("theme", next);
+  document.getElementById("themeToggle").textContent = next === "dark" ? "☀️" : "🌙";
+}
 
-  body.light-theme {
-    background-color: var(--color-bg-light);
-    color: var(--color-text-light);
-  }
+(function applyStoredTheme() {
+  const stored = localStorage.getItem("theme") || "light";
+  document.body.classList.add(stored + "-theme");
+  const icon = stored === "dark" ? "☀️" : "🌙";
+  window.addEventListener("DOMContentLoaded", () => {
+    const btn = document.getElementById("themeToggle");
+    if (btn) btn.textContent = icon;
+  });
+})();
 
-  body.dark-theme {
-    background-color: var(--color-bg-dark);
-    color: var(--color-text-dark);
-  }
+</script>
+  <style>
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body {
+      font-family: 'SF Pro Display', sans-serif;
+      background: linear-gradient(160deg, #e3f2fd, #e0f7fa);
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      padding: 10px;
+    }
+    .tab-panel {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(255,255,255,0.9);
+  padding: 6px 8px;
+  box-shadow: 0 -2px 8px rgba(0,0,0,0.1);
+  z-index: 1000;
+      display: flex;
+      justify-content: center;
+      flex-wrap: nowrap;
+      margin: 10px auto;
+      width: 100%;
+      max-width: 500px;
+      gap: 4px;
+    }
+    .tab-button {
+  background: linear-gradient(145deg, #00bfa5, #00c8a8);
+  border-radius: 12px;
+  margin: 0 4px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 
-  :root {
-    --color-bg-light: #f0f4f8;
-    --color-bg-dark: #1e1e1e;
-    --color-text-light: #222;
-    --color-text-dark: #eee;
-    --color-accent: #00bfa5;
-    --color-accent-dark: #009e85;
-  }
+      flex: 1;
+      padding: 8px 0;
+      font-size: 14px;
+      border-radius: 0;
+      border: none;
+      background: #00bfa5;
+      color: white;
+      font-weight: 600;
+      transition: background 0.2s;
+    }
+    .tab-button:hover {
+      background: #009e85;
+    }
+    .tab-button:active {
+      transform: scale(0.98);
+    }
+    .game-container {
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      margin-top: 20px;
+    }
+    .tap-image {
+      width: 45vw;
+      max-width: 300px;
+      border-radius: 16px;
+      cursor: pointer;
+      transition: transform 0.1s;
+    }
+    .tap-animation {
+      animation: tapPulse 0.2s ease;
+    }
+    @keyframes tapPulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(0.9); }
+      100% { transform: scale(1); }
+    }
+  
+body {
+  transition: background-color 0.4s ease, color 0.4s ease;
+}
+.light-theme {
+  background: linear-gradient(160deg, #e3f2fd, #e0f7fa);
+  color: #000;
+}
+.dark-theme {
+  background: linear-gradient(160deg, #121212, #1e1e1e);
+  color: #fff;
+}
+.tab-button {
+  background: linear-gradient(145deg, #00bfa5, #00c8a8);
+  border-radius: 12px;
+  margin: 0 4px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 
-  body.light-theme {
-    background-color: var(--color-bg-light);
-    color: var(--color-text-light);
-  }
+  transition: background 0.3s ease;
+}
+.dark-theme .tab-button {
+  background: linear-gradient(145deg, #00bfa5, #00c8a8);
+  border-radius: 12px;
+  margin: 0 4px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 
-  body.dark-theme {
-    background-color: var(--color-bg-dark);
-    color: var(--color-text-dark);
-  }
+  background: #333;
+  color: #fff;
+}
+.light-theme .tab-button {
+  background: linear-gradient(145deg, #00bfa5, #00c8a8);
+  border-radius: 12px;
+  margin: 0 4px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 
-  .tab-panel {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    background-color: var(--color-accent);
-    padding: 8px 0;
-    gap: 4px;
-    z-index: 100;
-  }
+  background: #00bfa5;
+  color: white;
+}
 
-  .tab-button {
-    flex: 1;
-    padding: 10px 0;
-    font-size: 14px;
-    border: none;
-    background: var(--color-accent);
-    color: white;
-    font-weight: 600;
-    transition: background 0.2s;
-  }
-
-  .tab-button:hover {
-    background: var(--color-accent-dark);
-  }
-
-  .tab-button:active {
-    transform: scale(0.98);
-  }
-
-  .theme-toggle {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    background: var(--color-accent);
-    color: white;
-    padding: 6px 12px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    z-index: 200;
-  }
 </style>
+</head>
+<body>
 
-<button class="theme-toggle" onclick="toggleTheme()">🌗 Тема</button>
+<div style="position: absolute; top: 10px; right: 12px; z-index: 1001;">
+  <button id="themeToggle" onclick="toggleTheme()" style="font-size: 22px; background: none; border: none; cursor: pointer;">🌗</button>
+</div>
 
-<button class="theme-toggle" onclick="toggleTheme()">🌗 Тема</button>
+
 <div class="tab-panel">
   <button class="tab-button" onclick="toggleTab('gameContainer')">🦈 Игра</button>
   <button class="tab-button" onclick="toggleTab('boosterContainer')">⚡ Бустеры</button>
@@ -94,18 +155,24 @@
   <button class="tab-button" onclick="openLeaderboard()">🏆 Топ</button>
 </div>
 
+<div class="balance" id="tokenCount">0 tokens</div>
+
 <div id="gameContainer" class="game-container">
   <img id="tapImage" class="tap-image" src="shark.png" alt="Shark" onclick="handleTap()" />
 </div>
 
 <div id="boosterContainer" class="game-container">
-  <h2>Бустеры</h2>
-  <p>Здесь будут бустеры для ускорения добычи токенов.</p>
+  <h2>Boosters</h2>
+  <button onclick="buyBooster(50, 1)">Auto-Tap +1 (50)</button>
+  <button onclick="buyBooster(100, 2)">Auto-Tap +2 (100)</button>
+  <button onclick="buyBooster(1000, 3)">Auto-Tap +3 (1000)</button>
 </div>
 
 <div id="shopContainer" class="game-container">
-  <h2>Магазин</h2>
-  <p>Купите скины и улучшения для акулы.</p>
+  <h2>Skins</h2>
+  <button onclick="buySkin('default', 0)">Default (Free)</button>
+  <button onclick="buySkin('gold', 1000)">Gold (1000)</button>
+  <button onclick="buySkin('leopard', 500)">Leopard (500)</button>
 </div>
 
 <div id="profileContainer" class="game-container">
@@ -124,9 +191,104 @@
 </div>
 
 <script>
+const dbUrl = "https://tralalero-fec07-default-rtdb.firebaseio.com";
+let userId = null;
+let balance = 0, autoTap = 0, level = 1, xp = 0;
+let ownedSkins = { default: true };
+let currentSkin = 'default';
+let userFirstName = '', userAvatar = '', joinDate = '';
+
+const tokenCount = document.getElementById("tokenCount");
+const tapImage = document.getElementById("tapImage");
+
+function updateBalanceDisplay() {
+  tokenCount.textContent = `${balance} tokens`;
+  document.getElementById("profileTokens").textContent = `Токенов: ${balance}`;
+}
+
+function updateProfileInfo() {
+  document.getElementById("profileName").textContent = userFirstName;
+  document.getElementById("profileAvatar").src = userAvatar;
+  document.getElementById("profileJoin").textContent = `Дата регистрации: ${joinDate}`;
+  document.getElementById("profileLevel").textContent = `Уровень: ${level}`;
+}
+
+function handleTap() {
+  balance++;
+  updateBalanceDisplay();
+  tapImage.classList.add("tap-animation");
+  setTimeout(() => tapImage.classList.remove("tap-animation"), 200);
+  if (navigator.vibrate) navigator.vibrate(30);
+  saveProgress();
+}
+
+function saveProgress() {
+  if (!userId) return;
+  fetch(`${dbUrl}/users/${userId}.json`, {
+    method: "PUT",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ balance, currentSkin, first_name: userFirstName, photo_url: userAvatar, joinDate })
+  });
+}
+
+function loadProgress() {
+  if (!userId) return;
+  fetch(`${dbUrl}/users/${userId}.json`)
+    .then(res => res.json())
+    .then(data => {
+      if (data) {
+        balance = data.balance || 0;
+        currentSkin = data.currentSkin || 'default';
+        userFirstName = data.first_name || 'Игрок';
+        userAvatar = data.photo_url || '';
+        joinDate = data.joinDate || new Date().toISOString().split('T')[0];
+        updateBalanceDisplay();
+        updateSkin(currentSkin);
+        updateProfileInfo();
+      }
+    });
+}
+
+function toggleTab(id) {
+  ['gameContainer', 'shopContainer', 'boosterContainer', 'profileContainer'].forEach(el => {
+    const element = document.getElementById(el);
+    if (element) element.style.display = 'none';
+  });
+  const selected = document.getElementById(id);
+  if (selected) selected.style.display = 'flex';
+}
+
+function buyBooster(cost, power) {
+  if (balance >= cost) {
+    balance -= cost;
+    autoTap += power;
+    updateBalanceDisplay();
+    saveProgress();
+  }
+}
+
+function buySkin(skin, cost) {
+  if (ownedSkins[skin] || balance >= cost) {
+    if (!ownedSkins[skin]) {
+      balance -= cost;
+      ownedSkins[skin] = true;
+    }
+    currentSkin = skin;
+    updateSkin(skin);
+    updateBalanceDisplay();
+    saveProgress();
+  }
+}
+
+function updateSkin(skin) {
+  if (skin === 'gold') tapImage.src = 'shark_skin1.png';
+  else if (skin === 'leopard') tapImage.src = 'shark_skin2.png';
+  else tapImage.src = 'shark.png';
+}
+
 function openLeaderboard() {
   document.getElementById('leaderboard-modal').style.display = 'flex';
-  fetch("https://tralalero-fec07-default-rtdb.firebaseio.com/users.json")
+  fetch(`${dbUrl}/users.json`)
     .then(res => res.json())
     .then(data => {
       const leaderboard = document.getElementById('leaderboardList');
@@ -143,57 +305,15 @@ function openLeaderboard() {
     });
 }
 
-function toggleTheme() {
-  const body = document.body;
-  if (body.classList.contains('dark-theme')) {
-    body.classList.replace('dark-theme', 'light-theme');
-    localStorage.setItem('theme', 'light');
-  } else {
-    body.classList.replace('light-theme', 'dark-theme');
-    localStorage.setItem('theme', 'dark');
+setInterval(() => {
+  if (autoTap > 0) {
+    balance += autoTap;
+    updateBalanceDisplay();
+    saveProgress();
   }
-} else {
-    body.classList.remove('light-theme');
-    body.classList.add('dark-theme');
-  }
-}
-
-function saveActiveTab(id) {
-  localStorage.setItem('activeTab', id);
-}
-
-function toggleTab(id) {
-  ['gameContainer', 'shopContainer', 'boosterContainer', 'profileContainer'].forEach(el => {
-    const element = document.getElementById(el);
-    if (element) element.style.display = 'none';
-  });
-  const selected = document.getElementById(id);
-  if (selected) selected.style.display = 'flex';
-  saveActiveTab(id);
-}
-
-function toggleTheme() {
-  const body = document.body;
-  const themeBtn = document.querySelector('.theme-toggle');
-  if (body.classList.contains('dark-theme')) {
-    body.classList.replace('dark-theme', 'light-theme');
-    localStorage.setItem('theme', 'light');
-    themeBtn.textContent = '🌙 Тема';
-  } else {
-    body.classList.replace('light-theme', 'dark-theme');
-    localStorage.setItem('theme', 'dark');
-    themeBtn.textContent = '☀️ Тема';
-  }
-}
+}, 1000);
 
 window.onload = () => {
-  const savedTheme = localStorage.getItem('theme') || 'light';
-  document.body.classList.add(`${savedTheme}-theme`);
-  document.querySelector('.theme-toggle').textContent = savedTheme === 'dark' ? '☀️ Тема' : '🌙 Тема';
-
-  const lastTab = localStorage.getItem('activeTab') || 'gameContainer';
-  toggleTab(lastTab);
-
   if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
     Telegram.WebApp.ready();
     Telegram.WebApp.expand();
@@ -204,48 +324,30 @@ window.onload = () => {
     joinDate = new Date().toISOString().split('T')[0];
     if (userId) loadProgress();
   }
+  toggleTab('gameContainer');
 };
+
 function toggleTheme() {
   const body = document.body;
-  if (body.classList.contains('dark-theme')) {
-    body.classList.replace('dark-theme', 'light-theme');
-    localStorage.setItem('theme', 'light');
-  } else {
-    body.classList.replace('light-theme', 'dark-theme');
-    localStorage.setItem('theme', 'dark');
-  }
+  const current = body.classList.contains("dark-theme") ? "dark" : "light";
+  const next = current === "dark" ? "light" : "dark";
+  body.classList.remove(current + "-theme");
+  body.classList.add(next + "-theme");
+  localStorage.setItem("theme", next);
+  document.getElementById("themeToggle").textContent = next === "dark" ? "☀️" : "🌙";
 }
 
-function saveActiveTab(id) {
-  localStorage.setItem('activeTab', id);
-}
-
-function toggleTab(id) {
-  ['gameContainer', 'shopContainer', 'boosterContainer', 'profileContainer'].forEach(el => {
-    const element = document.getElementById(el);
-    if (element) element.style.display = 'none';
+(function applyStoredTheme() {
+  const stored = localStorage.getItem("theme") || "light";
+  document.body.classList.add(stored + "-theme");
+  const icon = stored === "dark" ? "☀️" : "🌙";
+  window.addEventListener("DOMContentLoaded", () => {
+    const btn = document.getElementById("themeToggle");
+    if (btn) btn.textContent = icon;
   });
-  const selected = document.getElementById(id);
-  if (selected) selected.style.display = 'flex';
-  saveActiveTab(id);
-}
+})();
 
-window.onload = () => {
-  const savedTheme = localStorage.getItem('theme') || 'light';
-  document.body.classList.add(`${savedTheme}-theme`);
-
-  const lastTab = localStorage.getItem('activeTab') || 'gameContainer';
-  toggleTab(lastTab);
-
-  if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
-    Telegram.WebApp.ready();
-    Telegram.WebApp.expand();
-    const user = Telegram.WebApp.initDataUnsafe?.user || {};
-    userId = user?.id?.toString();
-    userFirstName = user?.first_name || 'Игрок';
-    userAvatar = user?.photo_url || '';
-    joinDate = new Date().toISOString().split('T')[0];
-    if (userId) loadProgress();
-  }
-};
 </script>
+
+</body>
+</html>
