--- a/index.html
+++ b/index.html
@@ -407,16 +407,12 @@ function updateSkin(skin) {
   else tapImage.src = 'shark.png';
 }
 
-
-// ✅ Показывает нужную вкладку, скрывает остальные
 function toggleTab(id) {
-
   ['gameContainer', 'shopContainer', 'boosterContainer', 'profileContainer'].forEach(el => {
     const e = document.getElementById(el);
     if (e) e.style.display = 'none';
   });
   const active = document.getElementById(id);
-  if (active && id === 'gameContainer') active.style.display = 'flex';
   if (active) active.style.display = 'flex';
 }
 
@@ -479,13 +475,9 @@ function updateProfileInfo() {
   const pAvatar = document.getElementById("profileAvatar");
   const pJoin = document.getElementById("profileJoin");
   if (pName) pName.textContent = userFirstName;
-  if (pAvatar) {
-    pAvatar.src = userAvatar;
-    if (!userAvatar) console.warn("⚠ userAvatar missing");
-}
+  if (pAvatar) pAvatar.src = userAvatar;
   if (pJoin) pJoin.textContent = "Дата регистрации: " + joinDate;
 }
-
 
 function openLeaderboard() {
   const modal = document.getElementById("leaderboard-modal");
@@ -512,6 +504,47 @@ function openLeaderboard() {
         list.appendChild(li);
       });
     });
+} {
+  const modal = document.getElementById("leaderboard-modal");
+  if (modal) modal.style.display = "flex";
+  fetch(`${dbUrl}/users.json`)
+    .then(r => r.json())
+    .then(data => {
+      const list = document.getElementById("leaderboardList");
+      if (!list) return;
+      list.innerHTML = "";
+      const users = Object.entries(data || {}).map(([id, u]) => ({ id, ...u }))
+        .sort((a, b) => b.balance - a.balance).slice(0, 10);
+      users.forEach(user => {
+        const name = user.first_name || "User";
+        const photo = user.photo_url || "https://t.me/i/userpic/320/" + (user.username || "unknown") + ".jpg";
+        const li = document.createElement("li");
+        li.innerHTML = `<img src="${photo}" style="width:24px;height:24px;border-radius:50%;margin-right:6px;" /><strong>${name}</strong>: ${user.balance}`;
+        list.appendChild(li);
+      });
+    });
 }
+
+window.addEventListener("DOMContentLoaded", () => {
+  const theme = localStorage.getItem("theme") || "light";
+  document.body.classList.add(theme + "-theme");
+  const themeBtn = document.getElementById("themeToggle");
+  if (themeBtn) themeBtn.textContent = theme === "dark" ? "🌗" : "☀";
+
+  toggleTab('gameContainer');
+  updateBalanceDisplay();
+
+  if (typeof Telegram !== "undefined" && Telegram.WebApp) {
+    Telegram.WebApp.ready();
+    Telegram.WebApp.expand();
+    const user = Telegram.WebApp.initDataUnsafe?.user || {};
+    userId = user.id?.toString();
+    userFirstName = user.first_name || user.username || "Игрок";
+    userAvatar = user.photo_url || (user.username ? `https://t.me/i/userpic/320/${user.username}.jpg` : "https://via.placeholder.com/72");
+    joinDate = new Date().toISOString().split("T")[0];
+    updateProfileInfo();
+    loadProgress();
+  }
+});
 </script></body>
 </html>
