--- a/index.html
+++ b/index.html
@@ -167,15 +167,59 @@ body {
 
 
 
-/* Fade transition for tab panels */
-.tab-panel {
-  display: none;
-  opacity: 0;
-  transition: opacity 0.3s ease;
+/* Telegram-style UI */
+body {
+  background-color: #0d0d0d;
+  color: #eee;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
 }
-.tab-panel.active {
-  display: flex !important;
-  opacity: 1;
+
+button, .button {
+  background: linear-gradient(135deg, #8e44ad, #2980b9);
+  color: white;
+  border: none;
+  padding: 12px 18px;
+  border-radius: 14px;
+  font-size: 16px;
+  font-weight: 600;
+  transition: background 0.3s ease, transform 0.1s ease;
+}
+button:active, .button:active {
+  transform: scale(0.96);
+  opacity: 0.9;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0; right: 0;
+  display: flex;
+  justify-content: space-around;
+  background: rgba(20, 20, 20, 0.85);
+  backdrop-filter: blur(10px);
+  padding: 10px 0;
+  z-index: 100;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0; right: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 16px;
+  background: rgba(20, 20, 20, 0.9);
+  backdrop-filter: blur(8px);
+  z-index: 100;
+}
+
+#themeToggle {
+  font-size: 22px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: white;
 }
 </style>
 </head>
@@ -419,24 +463,7 @@ function updateSkin(skin) {
   else tapImage.src = 'shark.png';
 }
 
-
 function toggleTab(id) {
-  const all = ['gameContainer','shopContainer','boosterContainer','profileContainer'];
-  all.forEach(el => {
-    const e = document.getElementById(el);
-    if (e) {
-      e.classList.remove('active');
-      e.style.display = 'none';
-    }
-  });
-  const active = document.getElementById(id);
-  if (active) {
-    active.classList.add('active');
-    active.style.display = 'flex';
-  }
-  localStorage.setItem('activeTab', id);
-}
-
   ['gameContainer', 'shopContainer', 'boosterContainer', 'profileContainer'].forEach(el => {
     const e = document.getElementById(el);
     if (e) e.style.display = 'none';
@@ -535,10 +562,7 @@ window.addEventListener("DOMContentLoaded", () => {
   const themeBtn = document.getElementById("themeToggle");
   if (themeBtn) themeBtn.textContent = theme === "dark" ? "🌗" : "🌞";
 
-  
-const savedTab = localStorage.getItem('activeTab') || 'gameContainer';
-toggleTab(savedTab);
-
+  toggleTab('gameContainer');
   updateBalanceDisplay();
 
   if (typeof Telegram !== "undefined" && Telegram.WebApp) {
